--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "element-ui": "^2.15.7",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "sass-loader": "^12.6.0",
