--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.10.3",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
