--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-baidu-map": "^0.21.22",
     "vue-concise-slider": "^4.2.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-countdown": "^1.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
